# probid

./: .gitignore  AGENTS.md  Makefile  PHILOSOPHY.md  README.md  architecture.excalidraw  pyproject.toml  test.sh
docs/: PRD.md  ra-12009-irr.md  ra-12009.md
docs/plans/: 2026-04-14-v0.2-signal-first-plan.md
docs/reports/: v0.2-acceptance-check.md
probid/: __init__.py  cli.py  display.py
scripts/: release.py  run_tests.py  sync_versions.py
src/app/: cli.py
src/app/agent/: __init__.py  auth.py  prompt.py  provider_registry.py  providers.py  repl.py  runtime.py  session.py  tools.py
src/app/analysis/: __init__.py  detectors.py
src/app/commands/: __init__.py  agent.py  analysis.py  awards.py  profiles.py  search.py
src/app/data/: cache.py
src/app/sources/: philgeps.py
src/app/ui/: __init__.py  display.py
src/probid/: analyze.py  cache.py  models.py
src/probid/sources/: philgeps.py
tests/: test_agent_auth_store.py  test_agent_provider_registry.py  test_agent_runtime_contract.py  test_philgeps_awards.py  test_probe_output_contract.py
