[project]
name = "probid"
version = "0.1.0"
description = "Probe Philippine government procurement — search bids, track awards, detect anomalies"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "click>=8.3,<9",
    "rich>=15.0,<16",
]

[project.optional-dependencies]
browser = [
    "playwright>=1.58,<2",
]

[project.scripts]
probid = "app.cli:cli"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
