[project]
name = "probid"
version = "0.1.0"
description = "Probe Philippine government procurement — search bids, track awards, detect anomalies"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "click>=8.3,<9",
    "rich>=15.0,<16",
]

[project.optional-dependencies]
browser = [
    "playwright>=1.58,<2",
]

[project.scripts]
probid = "probid_probing_agent.cli:cli"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = [
    "packages/ai/src",
    "packages/agent/src",
    "packages/probing-agent/src",
    "packages/tui/src",
    "packages/web-ui/src",
    "packages/mom/src",
    "packages/pods/src",
]
