[project]
name = "probid"
version = "0.1.0"
description = "Probe Philippine government procurement — search bids, track awards, detect anomalies"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "click>=8.3,<9",
    "rich>=15.0,<16",
    "httplib2>=0.22,<1",
]

[project.optional-dependencies]
browser = [
    "playwright>=1.58,<2",
]
dev = [
    "ruff>=0.11,<1",
    "ty>=0.0.1-alpha.9,<0.1",
]

[project.scripts]
probid = "probid_probing_agent.cli:cli"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "UP", # pyupgrade
]
ignore = [
    "E501", # line-too-long - handled by formatting
]

[tool.ruff.lint.isort]
known-first-party = ["probid_probing_agent", "probid_agent", "probid_ai", "probid_tui"]

[tool.ty]
environment.python-version = "3.12"
environment.extra-paths = [
    "packages/probing-agent/src",
    "packages/agent/src",
    "packages/ai/src",
    "packages/tui/src",
    "packages/web-ui/src",
]
src.include = [
    "packages/probing-agent/src",
    "packages/agent/src",
    "packages/ai/src",
    "packages/tui/src",
    "packages/web-ui/src",
]
src.exclude = [
    "**/tests/**",
    "**/test_*.py",
]
terminal.output-format = "concise"

[[tool.ty.overrides]]
include = ["**/*.py"]

[tool.ty.overrides.analysis]
allowed-unresolved-imports = [
    "playwright.**",
    "termios",
    "tty",
    "fcntl",
    "signal",
]

[tool.ty.overrides.rules]
# Warn on unresolved references instead of error
possibly-unresolved-reference = "warn"

[tool.setuptools.packages.find]
where = [
    "packages/ai/src",
    "packages/agent/src",
    "packages/probing-agent/src",
    "packages/tui/src",
    "packages/web-ui/src",
]
